--- a/homepage.css
+++ b/homepage.css
@@ -3,6 +3,15 @@ form{
   resize: both;
   overflow: auto;
 }
+h1{
+  font-family: 'Gloria Hallelujah', cursive;
+  position:absolute;
+  top:32%;
+  left:32%;
+  font-size:5vw;
+  letter-spacing:5px;
+  resize:both;
+}
 #search-bar{
   border: 1px solid #000000;
   border-right:none;
@@ -10,7 +19,7 @@ form{
   padding:10px;
   outline:none;
   border-radius:20%;
-  width:250px;
+  width:5vw;
   height:100px;
   position: absolute;
   top: 50%;
@@ -24,7 +33,7 @@ form{
   font-size:20px;
   padding:10px;
   height:100px;
-  width:80px;
+  width:6vw;
   border-radius:30%;
   background: #ffffff;
   font-weight:bold;
