--- a/ScheduleMatching.css
+++ b/ScheduleMatching.css
@@ -1,5 +1,6 @@
 html{
   margin:0;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 #search-bar{
   border: 1px solid #000000;
@@ -125,4 +126,119 @@ nav{
 }
 .nav-toggle:checked ~ nav a{
   opacity: 1;
+}
+h1{
+  top:8%;
+  left:5%;
+  position:absolute;
+  font-size:4vw;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+#search-officehour{
+  border: 1px solid #000000;
+  border-right:none;
+  font-size:15px;
+  padding:10px;
+  outline:none;
+  border-radius:20%;
+  width:4vw;
+  height:35px;
+  position: absolute;
+  text-align: -webkit-left;
+  min-width: 35%;
+  font-family: 'Gloria Hallelujah', cursive;
+  left:25%;
+  top:25%;
+}
+.oh{
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 20px;
+}
+
+.oh span{
+  position:absolute;
+  top:24%;
+  right:76%;
+  font-size: 25px;
+}
+#search-oh-btn{
+  border: 1px solid #000000;
+  font-size:15px;
+  height:35px;
+  width:4vw;
+  border-radius:30%;
+  background: #ffffff;
+  font-weight:bold;
+  cursor:pointer;
+  outline:none;
+  position:absolute;
+  font-family: 'Gloria Hallelujah', cursive;
+  text-align: center;
+  top:25%;
+  left:60%;
+}
+.schedule{
+  text-align: center;
+  padding:10px;
+  margin:10px;
+}
+table{
+  position: absolute;
+  top:30%;
+  left:12.5%;
+  width:55%;
+  height:100%;
+  border-radius: 10px;
+  border: 4px solid black;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 15px;
+
+}
+td{
+  padding:5px;
+  width:auto;
+  border: 1px solid black;
+}
+td:nth-last-child(1){
+  border-right:2px solid black;
+}
+
+.symbolandresult{
+  border: 3px solid black;
+  position: absolute;
+  right:3%;
+  top: 10%;
+  border-radius: 10px;
+  padding:10px;
+  display: block;
+}
+.officetime{
+  text-decoration: underline;
+}
+.unavailable{
+  align-items: center;
+  padding:3px;
+  margin-right: 1px;
+}
+.available{
+  padding:3px;
+  margin-right:1px;
+  align-items: center;
+}
+.unavailable span{
+  width:1em;
+  height:1em;
+  position: absolute;
+  background: black;
+  top:auto;
+  margin-right:1px;
+}
+
+.available span{
+  width:1em;
+  height:1em;
+  position: absolute;
+  background: green;
+  margin-right:1px;
 }
